--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
-.button-class {
-  background-color: #4caf50; /* Green */
+.pokemonButton {
+  background-color: #1670f7
   border: none;
   color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
+  text-transform: capitalize;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
@@ -13,7 +14,7 @@
   cursor: pointer;
   background-color: white;
   color: black;
-  border: 2px solid #4caf50;
+  border: 2px solid #1670f7;
 }
 
 /* .body {
@@ -22,7 +23,7 @@
   background-position: center;
 } */
 
-#modal-container {
+/* #modal-container {
   position: fixed;
   padding: 20px;
   box-sizing: border-box;
@@ -31,19 +32,17 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
   z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
   overflow: auto;
-
-  /* this is used to center the modal */
   display: grid;
   text-align: center;
+} */
+.pokemon-container {
+  text-align: center;
+  padding: 0 2px;
 }
 
-.modal {
+.pokemon-modal {
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
@@ -71,11 +70,10 @@
   margin-bottom: 0;
 }
 
-#modal-container {
+/* #modal-container {
   display: none;
 }
 
 #modal-container.is-visible {
-  /* CSS for modal container - add your own desired CSS styles here */
   display: block;
-}
+} */
